--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
   <body>
     <div class='main-content'>
         {{>header}}
+        <p>This site was created by Yumi Yanesa. It uses data from mapbox.com. </p>
     <img class="portrait other" src="/img/yumi2.jpg">
     </div>
     
